--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,11 @@
-# Streamlit UI and utilities
 streamlit
 gdown
 pillow
-numpy==1.26.4
+numpy<2.0
 opencv-python
+torch==2.5.1
+torchvision==0.18.1
 scikit-image
-
-# PyTorch core + vision
-torch==2.2.2
-torchvision==0.17.2
-
 # U2Net (image segmentation)
 scipy
 
